--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 ﻿body {
   background-color: black;
-  padding-top: 60px; 
+  padding-top: 60px;
 }
 
 @media (max-width:767px) {
@@ -10,8 +10,9 @@
 }
 
 .logo {
-  height: 90px;
-  width: 160px;
+  /*height: 90px;
+  width: 160px;*/
+  margin: 0 auto;
 }
 
 .portfolioimg {
@@ -30,7 +31,12 @@
 .carousel-caption {
   color: black;
 }
-@media (min-width: 768px) {
+
+.btn a {
+  display: block;
+}
+
+/*@media (min-width: 768px) {
   .seven-cols .col-md-1,
   .seven-cols .col-sm-1,
   .seven-cols .col-lg-1 {
@@ -52,4 +58,4 @@
   .seven-cols .col-lg-1 {
     width: 14.285714285714285714285714285714%;
   }
-}
+}*/
