further css fixes to skills section

--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,21 @@
   }
 }
 
+.skills {
+  position: relative;
+}
+
 .logo {
   /*height: 90px;
   width: 160px;*/
-  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .portfolioimg {
