--- a/css/index.css
+++ b/css/index.css
@@ -9,21 +9,10 @@
   }
 }
 
-.skills {
-  position: relative;
-}
-
 .logo {
   /*height: 90px;
   width: 160px;*/
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  margin: 0 auto;
 }
 
 .portfolioimg {
