--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,14 @@
 }
 
 #home {
-  background: url("https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/images/678125main_hubble_sparkles_full_full.jpg");
+  background: rgba(242,246,248,1);
+  background: -moz-linear-gradient(45deg, rgba(242,246,248,1) 0%, rgba(242,246,248,1) 19%, rgba(216,225,231,1) 33%, rgba(181,198,208,1) 49%, rgba(242,246,248,1) 69%, rgba(224,239,249,1) 92%, rgba(224,239,249,1) 100%);
+  background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(242,246,248,1)), color-stop(19%, rgba(242,246,248,1)), color-stop(33%, rgba(216,225,231,1)), color-stop(49%, rgba(181,198,208,1)), color-stop(69%, rgba(242,246,248,1)), color-stop(92%, rgba(224,239,249,1)), color-stop(100%, rgba(224,239,249,1)));
+  background: -webkit-linear-gradient(45deg, rgba(242,246,248,1) 0%, rgba(242,246,248,1) 19%, rgba(216,225,231,1) 33%, rgba(181,198,208,1) 49%, rgba(242,246,248,1) 69%, rgba(224,239,249,1) 92%, rgba(224,239,249,1) 100%);
+  background: -o-linear-gradient(45deg, rgba(242,246,248,1) 0%, rgba(242,246,248,1) 19%, rgba(216,225,231,1) 33%, rgba(181,198,208,1) 49%, rgba(242,246,248,1) 69%, rgba(224,239,249,1) 92%, rgba(224,239,249,1) 100%);
+  background: -ms-linear-gradient(45deg, rgba(242,246,248,1) 0%, rgba(242,246,248,1) 19%, rgba(216,225,231,1) 33%, rgba(181,198,208,1) 49%, rgba(242,246,248,1) 69%, rgba(224,239,249,1) 92%, rgba(224,239,249,1) 100%);
+  background: linear-gradient(45deg, rgba(242,246,248,1) 0%, rgba(242,246,248,1) 19%, rgba(216,225,231,1) 33%, rgba(181,198,208,1) 49%, rgba(242,246,248,1) 69%, rgba(224,239,249,1) 92%, rgba(224,239,249,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#e0eff9', GradientType=1 );
   background-size: 100%;
   text-align: center;
   color: #fff;
