--- a/css/index.css
+++ b/css/index.css
@@ -45,26 +45,6 @@
   display: block;
 }
 
-/*@media (min-width: 768px) {
-  .seven-cols .col-md-1,
-  .seven-cols .col-sm-1,
-  .seven-cols .col-lg-1 {
-    width: 100%;
-  }
+.devicon-github-plain-wordmark, .devicon-jquery-plain-wordmark, .devicon-bootstrap-plain, .devicon-javascript-plain, .devicon-css3-plain-wordmark, .devicon-html5-plain-wordmark{
+ font-size: 80px;
 }
-
-@media (min-width: 992px) {
-  .seven-cols .col-md-1,
-  .seven-cols .col-sm-1,
-  .seven-cols .col-lg-1 {
-    width: 14.285714285714285714285714285714%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .seven-cols .col-md-1,
-  .seven-cols .col-sm-1,
-  .seven-cols .col-lg-1 {
-    width: 14.285714285714285714285714285714%;
-  }
-}*/
